--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ function googleTranslateElementInit() {
                         <p><span class="title-s"><i class='bi bi-code'></i> Profile: </span> <span>Full Stack Mobile Developer</span></p>
                          <p><span class="title-s"><i class='bi bi-envelope'></i> Email: </span> <span><a href='mailto:tajeddine.nkt@gmail.com'><u style="color:dodgerblue">tajeddine.nkt@gmail.com</u></a></span></p>
                         <p><span class="title-s"><i class='bi bi-linkedin'></i> Linkedin: </span> <span><a href='linkedin.com/in/isselmou-tajedine-984ab3196/'><u style="color:dodgerblue">linkedin.com/in/isselmou-tajedine-984ab3196/</u></a></span></p>
-                        <p><span class="title-s"><i class='bi bi-whatsapp'></i> WhatsApp: </span> <span><a href="https://wa.me/22227777346"> <u style='color:green;font-weight:bold'>+222 27 77 73 46</u></a></span></p>
+                        <p><span class="title-s"><i class='bi bi-whatsapp'></i> WhatsApp: </span> <span><a href="https://wa.me/22234023500"> <u style='color:green;font-weight:bold'>+222 34023500</u></a></span></p>
                       </div>
                     </div>
                   </div>
@@ -492,12 +492,12 @@ Mobile display adapted (Bootstrap).              </p>
                        
                        <p><span class="title-s"><i class='bi bi-envelope'></i> Email: </span> <span><a href='mailto:tajeddine.nkt@gmail.com'><u style="color:dodgerblue">tajeddine.nkt@gmail.com</u></a></span></p>
                         <p><span class="title-s"><i class='bi bi-linkedin'></i> Linkedin: </span> <span><a href='linkedin.com/in/isselmou-tajedine-984ab3196/'><u style="color:dodgerblue">linkedin.com/in/isselmou-tajedine-984ab3196/</u></a></span></p>
-                        <p><span class="title-s"><i class='bi bi-whatsapp'></i> WhatsApp: </span> <span><a href="https://wa.me/22227777346"> <u style='color:green;font-weight:bold'>+222 27 77 73 46</u></a></span></p>
+                        <p><span class="title-s"><i class='bi bi-whatsapp'></i> WhatsApp: </span> <span><a href="https://wa.me/22234023500"> <u style='color:green;font-weight:bold'>+222 34023500</u></a></span></p>
                       </ul>
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href="https://wa.me/22227777346"><span class="ico-circle"><i class="bi bi-whatsapp"></i></span></a></li>
+                        <li><a href="https://wa.me/22234023500"><span class="ico-circle"><i class="bi bi-whatsapp"></i></span></a></li>
                         <li><a href="https://www.facebook.com/maxtaj"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a href="https://instagram.com/maxi_coder"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href="https://twitter.com/IsselmouTaj"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
